tests/More/Bad/3.tig
/* Type mismatch */
3 + "four"


